--- a/benchmarks/report-size-ocamljs.config
+++ b/benchmarks/report-size-ocamljs.config
@@ -1,2 +1,2 @@
-histogramref sizes "" js_of_ocaml/gzipped #fbaf4f js-of_ocaml (gzipped)
+histogramref sizes "" js_of_ocaml/gzipped #fbaf4f js_of_ocaml (gzipped)
 histogram sizes "" ocamljs #22bb22 Ocamljs (gzipped)
