--- a/benchmarks/report-size-optim.config
+++ b/benchmarks/report-size-optim.config
@@ -1,8 +1,8 @@
 #histogram sizes "" unsafe/js_of_ocaml #fb9f3f Unsafe
-histogramref sizes "" js_of_ocaml/generated #fbaf4f Generated code
+histogramref sizes "" js_of_ocaml/generated #fbaf4f Default
 #histogram sizes "" nooptcall #a75f0c no optimization of calls
-histogram sizes "" noinline #fb7f1f no inlining
-histogram sizes "" notcompact #fb5f0f no compact code
-histogram sizes "" nodeadcode #fb3f00 no dead code removal
+histogram sizes "" noinline #d98e2d no inlining
+histogram sizes "" notcompact #a75f0c no compact code
+histogram sizes "" nodeadcode #752d09 no dead code removal
 #histogram sizes "" ocamljs #227722 Ocamljs generated code
 #histogram sizes "" unsafe/ocamljs #229922 Ocamljs + unsafe
