Use variable names from debugging information in pretty mode
Ignore-this: a381961b09fe11f9d75e2819d1c50d5b

darcs-hash:20110325114427-c8b6b-d38a3303bff4aad210852b3c1917b3171639b5fc

--- a/examples/Makefile.common
+++ b/examples/Makefile.common
@@ -3,7 +3,7 @@ include ../../Makefile.conf
 
 COMP=../../compiler/$(COMPILER)
 JSFILES=../../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/syntax/pa_js.cmo" -I ../../lib
+OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../../lib/syntax/pa_js.cmo" -I ../../lib -g
 STDLIB=$(LIBNAME).cma
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
