--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -8,12 +8,14 @@ OBJS=util.cmx dgraph.cmx \
      instr.cmx code.cmx primitive.cmx subst.cmx pure_fun.cmx deadcode.cmx \
      flow.cmx inline.cmx \
      tailcall.cmx freevars.cmx phisimpl.cmx \
-     linker.cmx generate.cmx parse.cmx main.cmx
+     linker.cmx generate.cmx parse.cmx driver.cmx
 
-compile: $(OBJS:cmx=cmo)
-	ocamlfind ocamlc -package findlib,str -linkpkg str.cma -o $@ $^
+COMPOBJS=$(OBJS) main.cmx
 
-$(COMPILER): $(OBJS)
+compile: $(COMPOBJS:cmx=cmo)
+	ocamlfind ocamlc -package findlib,str -linkpkg -o $@ $^
+
+$(COMPILER): $(COMPOBJS)
 	ocamlfind ocamlopt -package findlib,str -linkpkg -o $@ $^
 
 %.cmx: %.ml
