Add Ocaml toplevel
Ignore-this: 31734d0841792477486aa07474be67f9

darcs-hash:20110331205054-c8b6b-b3f1644daaa7ccb130bfe4cef02d2180b318a95b

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -18,6 +18,9 @@ compile: $(COMPOBJS:cmx=cmo)
 $(COMPILER): $(COMPOBJS)
 	ocamlfind ocamlopt -package findlib,str -linkpkg -o $@ $^
 
+compiler.cma: $(OBJS:cmx=cmo)
+	ocamlfind ocamlc -a -o $@ $^
+
 %.cmx: %.ml
 	ocamlfind ocamlopt -package findlib,str -c $<
 
@@ -28,7 +31,7 @@ $(COMPILER): $(COMPOBJS)
 	ocamlfind ocamlc -package findlib,str -c $<
 
 clean:
-	rm -f *.cm[iox] *.o
+	rm -f *.cm[aiox] *.o
 	rm -f js_of_ocaml compile
 
 depend:
