Improved the OCaml toplevel
Ignore-this: e19d41771cd7ea3f33384e803c800353

darcs-hash:20110401223554-c8b6b-0320363e43cf4ad6028b1869a349278647a3aa2e

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -8,7 +8,7 @@ include ../Makefile.conf
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js ../runtime/weak.js toplevel_runtime.js
 OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../lib -I ../compiler
-STDLIB= ../lib/$(LIBNAME).cma toplevellib.cma ../compiler/compiler.cma
+STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma toplevellib.cma
 
 # Removed gc and sys
 STDLIB_MODULES=\
@@ -63,7 +63,7 @@ $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
 	$(COMP) -toplevel -noinline -noruntime $(JSFILES) $(NAME).byte $(OPTIONS)
 
 $(NAME).byte: $(OBJS) ../compiler/compiler.cma
-	$(OCAMLC) -linkall -package str -linkpkg -o $@.tmp $(STDLIB) $^
+	$(OCAMLC) -linkall -package str -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
 	/usr/lib/ocaml/expunge $@.tmp $@ $(PERVASIVES)
 	rm -f $@.tmp
 
@@ -74,6 +74,9 @@ $(NAME).byte: $(OBJS) ../compiler/compiler.cma
 
 ../compiler/compiler.cma:
 	$(MAKE) -C ../compiler compiler.cma
+
+errors.cmi: errors.mli
+	$(OCAMLC) -c $<
 
 clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
