--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,13 +1,14 @@
-# Where binaries are installed:
-BINDIR = /usr/local/bin
+
+-include Makefile.local
+
+BINDIR ?= /usr/local/bin
 
 ####
 
-LIBRARY=js_of_ocaml
-LIBNAME=js_of_ocaml
-COMPILER=js_of_ocaml
-
+LIBRARY  ?= js_of_ocaml
+LIBNAME  ?= js_of_ocaml
+COMPILER ?= js_of_ocaml
 
 ### Optional dependencies: ocsigen-deriving
 
-DERIVING=$(shell ocamlfind query deriving-ocsigen)
+DERIVING ?= $(shell ocamlfind query deriving-ocsigen)
