Do not include "Makefile.local" in the darcs repo.
Ignore-this: 88960d361c617ae8b92d839b5ec96e63

darcs-hash:20110426090638-da4f2-6a7c38d634cb5998865384097b500fd2ac9c11a7

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -1,14 +1,15 @@
 
--include Makefile.local
-
-BINDIR ?= /usr/local/bin
+# Where binaries are installed:
+BINDIR := /usr/local/bin
 
 ####
 
-LIBRARY  ?= js_of_ocaml
-LIBNAME  ?= js_of_ocaml
-COMPILER ?= js_of_ocaml
+LIBRARY  := js_of_ocaml
+LIBNAME  := js_of_ocaml
+COMPILER := js_of_ocaml
 
 ### Optional dependencies: ocsigen-deriving
 
-DERIVING ?= $(shell ocamlfind query deriving-ocsigen)
+DERIVING := $(shell ocamlfind query deriving-ocsigen)
+
+-include Makefile.local
