Makefile: do not fail when trying to clean an unbuild documentation
Ignore-this: c2c8745f4e7b7d51102e882df16fcbfc

darcs-hash:20110701152636-da4f2-9632b45c053ef461a2c5cc44fb31273d17e9742a

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -12,4 +12,4 @@ api-html/index.html: ${MLIS} api-index
 	   -d api-html -I ../lib -I ../lib/deriving_json ${MLIS}
 
 clean:
-	rm -r api-html/*
+	-rm -rf api-html/*
