Makefile: fix Makefile.local usage
Ignore-this: 748bb64dd6f7d7dd411179f90b2bd402

darcs-hash:20110706162343-da4f2-414d314d93d26f8fb2faa5be1cc041e560d2f740

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -5,6 +5,8 @@ OBJS=toplevel.cmo
 all: $(NAME).js
 
 include ../Makefile.conf
+-include ../Makefile.local
+
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js ../runtime/weak.js toplevel_runtime.js
 OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../lib -I ../compiler
