Makefile: remove warning when deriving is not installed
Ignore-this: 6d819e2823f81ecef527bc44273c118a

darcs-hash:20110713085611-c8b6b-307d3bb3549339673e2752bd0a2703db4c57c90d

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -10,4 +10,4 @@ COMPILER := js_of_ocaml
 
 ### Optional dependencies: ocsigen-deriving
 
-DERIVING := $(shell ocamlfind query deriving-ocsigen)
+DERIVING := $(shell ocamlfind query deriving-ocsigen 2> /dev/null)
