toplevel/Makefile : Add and EXPUNGE variable
Ignore-this: 4e3090eb301c08bd0442ff23e6f00a95

darcs-hash:20110713152356-0c732-7e195caa3015899ca763d355100152471ab69a77

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -11,7 +11,7 @@ COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js ../runtime/weak.js toplevel_runtime.js
 OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../lib -I ../compiler
 STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma toplevellib.cma
-
+EXPUNGE=$(shell ocamlc -where)/expunge
 # Removed gc and sys
 STDLIB_MODULES=\
   arg \
@@ -66,7 +66,7 @@ $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
 
 $(NAME).byte: $(OBJS) ../compiler/compiler.cma
 	$(OCAMLC) -linkall -package str -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
-	/usr/lib/ocaml/expunge $@.tmp $@ $(PERVASIVES)
+	$(EXPUNGE) $@.tmp $@ $(PERVASIVES)
 	rm -f $@.tmp
 
 %.cmo: %.ml
