Allow compilation on win32/msvc (close #213)
Ignore-this: 46fb25b42a381df2213bc389eeaccac0

Adds OBJEXT, LIBEXT, EXEEXT and DLLEXT configuration variables (thanks to Thomas Ripoche)

darcs-hash:20111114134752-da4f2-dde226c80c09dbd42bdac4c9684f2c9839c75d1c

--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -4,8 +4,8 @@ INTF := lib/*.cmi
 
 IMPL := lib/$(LIBNAME).cma   \
         lib/syntax/pa_js.cmo \
-	lib/dll$(LIBNAME).so \
-        lib/lib$(LIBNAME).a
+	lib/dll$(LIBNAME)$(DLLEXT) \
+        lib/lib$(LIBNAME)$(LIBEXT)
 
 OTHERS := runtime/runtime.js
 
@@ -17,9 +17,9 @@ INTF += lib/deriving_json/deriving_Json.cmi       \
 IMPL += lib/syntax/pa_deriving_Json.cmo \
         lib/deriving_json.cma           \
 
-NATIMPL += lib/deriving_json.cmxa \
-	   lib/deriving_json.cmxs \
-	   lib/deriving_json.a    \
+NATIMPL += lib/deriving_json.cmxa     \
+	   lib/deriving_json.cmxs     \
+	   lib/deriving_json$(LIBEXT) \
 
 endif
 
