--- a/Makefile.conf
+++ b/Makefile.conf
@@ -5,8 +5,15 @@ BINDIR := /usr/local/bin
 ####
 
 LIBRARY  := js_of_ocaml
-LIBNAME  := js_of_ocaml
-COMPILER := js_of_ocaml
+LIBNAME  := js_of_ocaml$(LIBEXT)
+COMPILER := js_of_ocaml$(EXEEXT)
+
+####
+
+EXEEXT := 
+OBJEXT := .o
+LIBEXT := .a
+DLLEXT := .so
 
 ### Optional dependencies: ocsigen-deriving
 
