Makefile: install .cmx for deriving_Json
Ignore-this: f9ed46e50ba1d02c1e6745109520761a

darcs-hash:20111124131359-da4f2-759ae3e5f889df4e5acd8e57051d14038c1ee0d9

--- a/Makefile.filelist
+++ b/Makefile.filelist
@@ -11,15 +11,19 @@ OTHERS := runtime/runtime.js
 
 ifneq "${DERIVING}" ""
 
-INTF += lib/deriving_json/deriving_Json.cmi       \
+JSON := lib/deriving_json/deriving_Json.cmi       \
         lib/deriving_json/deriving_Json_lexer.cmi \
+
+INTF += $(JSON)
 
 IMPL += lib/syntax/pa_deriving_Json.cmo \
         lib/deriving_json.cma           \
 
-NATIMPL += lib/deriving_json.cmxa     \
+NATIMPL := lib/deriving_json.cmxa     \
 	   lib/deriving_json.cmxs     \
 	   lib/deriving_json$(LIBEXT) \
+
+NATIMPL += $(JSON:.cmi=.cmx)
 
 endif
 
