Json: add a testsuite (and fix a small bug...)
Ignore-this: dd15cae2a062ff6a1927060f7982e441

darcs-hash:20111125153553-da4f2-bf7aa5a92f237f199272d43bdc9611713624e9d2

--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -3,7 +3,7 @@ include ../Makefile.conf
 
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../lib
+OCAMLC=ocamlfind ocamlc -package lwt,deriving-ocsigen.syntax -ppopt ../lib/syntax/pa_js.cmo -ppopt ../lib/syntax/pa_deriving_Json.cmo -I ../lib -I ../lib/deriving_json
 STDLIB=$(LIBNAME).cma
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
@@ -13,7 +13,7 @@ $(NAME).byte: $(OBJS)
 	$(OCAMLC) -linkpkg -o $@ $(STDLIB) $^
 
 %.cmo: %.ml ../lib/$(STDLIB)
-	$(OCAMLC) -g -c $<
+	$(OCAMLC) -syntax camlp4o -g -c $<
 
 clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
