--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -3,7 +3,7 @@ include ../Makefile.conf
 
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt,deriving-ocsigen.syntax -ppopt ../lib/syntax/pa_js.cmo -ppopt ../lib/syntax/pa_deriving_Json.cmo -I ../lib -I ../lib/deriving_json
+OCAMLC=ocamlfind ocamlc -package lwt,deriving-ocsigen.base,deriving-ocsigen.syntax -ppopt ../lib/syntax/pa_js.cmo -ppopt ../lib/syntax/pa_deriving_Json.cmo -I ../lib -I ../lib/deriving_json
 STDLIB=$(LIBNAME).cma
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
