Makefile: small fix (required for the bundle)
Ignore-this: ea68c25e07e02391a53d69d8d80e4352

darcs-hash:20111208160022-da4f2-f123c3ad7edb09e4a3ce476f9c44b17b06cc6908

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -30,7 +30,7 @@ syntax/pa_js.cmo: syntax/pa_js.ml
 	ocamlfind ocamlc -package camlp4.extend,camlp4.quotations -syntax camlp4o -c $<
 
 syntax/pa_deriving_Json.cmo: syntax/pa_deriving_Json.ml
-	ocamlfind ocamlc -package deriving-ocsigen,camlp4.quotations.o -syntax camlp4o -c $<
+	ocamlfind ocamlc -package deriving-ocsigen.syntax,camlp4.quotations.o -syntax camlp4o -c $<
 
 %.cmo: %.ml syntax/pa_js.cmo
 	ocamlfind ocamlc -pp "camlp4o syntax/pa_js.cmo" -package lwt -c -g $<
