Makefile: Better support for disabling native compilation
Ignore-this: eb5c60358442dd639d40dcd01e7e0b14
Author: Stéphane Glondu.

Introduce BEST variable in Makefile.conf, used to determine if native
compiler and libraries should be compiled and
installed. Unconditionally set to "opt" (meaning ocamlopt is
available), it can be overridden in calls to "make".

darcs-hash:20111213101554-da4f2-3fdc373ef3bfd9a0343516bea68d4f1f0771440b

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,9 +8,11 @@ LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 
+BEST := opt # opt/byte
+
 ####
 
-EXEEXT := 
+EXEEXT :=
 OBJEXT := .o
 LIBEXT := .a
 DLLEXT := .so
