Makefile: small fix in default config.
Ignore-this: 69fd409ebf7277905552f4436cc322e7

darcs-hash:20111214145342-da4f2-cb6f8612cb93c93beca169870580c2e2cc58a2fa

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,8 @@ LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 
-BEST := opt # opt/byte
+# opt/byte
+BEST := opt
 
 ####
 
