Compiler: added timers for debugging performance issues
Ignore-this: 64974084d6e76559bf29593b80b0513d

darcs-hash:20120320110558-c8b6b-bd2d52f3926aeff99c223b325a3874fcac339bba

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -3,6 +3,8 @@ include ../Makefile.conf
 
 all: $(COMPILER)
 
+PACKAGES=findlib,str,unix
+
 OBJS=pretty_print.cmx util.cmx dgraph.cmx \
      javascript.cmx js_output.cmx js_simpl.cmx \
      instr.cmx code.cmx primitive.cmx subst.cmx pure_fun.cmx deadcode.cmx \
@@ -17,10 +19,10 @@ $(COMPILER): compile.$(BEST)
 
 .INTERMEDIATE: compile.byte compile.opt
 compile.byte: $(COMPOBJS:cmx=cmo)
-	ocamlfind ocamlc -package findlib,str -linkpkg -o $@ $^
+	ocamlfind ocamlc -package $(PACKAGES) -linkpkg -o $@ $^
 
 compile.opt: $(COMPOBJS)
-	ocamlfind ocamlopt -package findlib,str -linkpkg -o $@ $^
+	ocamlfind ocamlopt -package $(PACKAGES) -linkpkg -o $@ $^
 
 compiler.cma: $(OBJS:cmx=cmo)
 	ocamlfind ocamlc -a -o $@ $^
