Toplevel: make it compile with OCaml 4.0
Ignore-this: f2cf802d0ca18e7f58eb39148a57fed7

darcs-hash:20120903114837-c8b6b-6306107adb0d59177226e283e3f229f7fd6052c1

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -7,10 +7,16 @@ all: $(NAME).js
 include ../Makefile.conf
 -include ../Makefile.local
 
+ifeq ($(shell ocamlc -v | grep -q "version 4"; echo $$?),0)
+OCAMLLIB=ocamlcommon.cma ocamlbytecomp.cma ocamltoplevel.cma
+else
+OCAMLLIB=toplevellib.cma
+endif
+
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js ../runtime/weak.js toplevel_runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../lib -I ../compiler
-STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma toplevellib.cma
+OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I +compiler-libs -I ../lib -I ../compiler
+STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma $(OCAMLLIB)
 EXPUNGE=$(shell ocamlc -where)/expunge
 # Removed gc and sys
 STDLIB_MODULES=\
@@ -62,7 +68,7 @@ PERVASIVES=$(STDLIB_MODULES) outcometree topdirs toploop
 #	ocamlfind ocamlc -linkall -g -package str -linkpkg toplevellib.cma -o $@.tmp $^
 
 $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
-	$(COMP) -toplevel -noinline -noruntime $(JSFILES) $(NAME).byte $(OPTIONS)
+	$(COMP) -I $(shell ocamlc -where)/compiler-libs -toplevel -noinline -noruntime $(JSFILES) $(NAME).byte $(OPTIONS)
 
 $(NAME).byte: $(OBJS) ../compiler/compiler.cma
 	$(OCAMLC) -linkall -package str -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
