--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -8,8 +8,8 @@ lib: compiler.cma compiler.cmxa compiler.cmxs
 PACKAGES=findlib,str,unix
 
 OBJS=pretty_print.cmx util.cmx dgraph.cmx \
-     javascript.cmx js_output.cmx js_simpl.cmx \
-     instr.cmx code.cmx primitive.cmx subst.cmx pure_fun.cmx deadcode.cmx \
+     code.cmx javascript.cmx js_output.cmx js_simpl.cmx \
+     instr.cmx primitive.cmx subst.cmx pure_fun.cmx deadcode.cmx \
      flow.cmx inline.cmx \
      tailcall.cmx freevars.cmx phisimpl.cmx \
      linker.cmx generate.cmx parse_bytecode.cmx driver.cmx
