build and install compiler libraries

--- a/Makefile.conf
+++ b/Makefile.conf
@@ -7,6 +7,7 @@ BINDIR := /usr/local/bin
 LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
+COMPILER_LIBRARY := js_of_ocaml_compiler
 
 # opt/byte
 BEST := opt
