--- a/Makefile.conf
+++ b/Makefile.conf
@@ -18,8 +18,8 @@ OBJEXT := .o
 LIBEXT := .a
 DLLEXT := .so
 
-### Optional dependencies: ocsigen-deriving
+### Optional dependencies: deriving
 
-DERIVING := $(shell ocamlfind query deriving-ocsigen 2> /dev/null)
+DERIVING := $(shell ocamlfind query deriving 2> /dev/null)
 
 NATDYNLINK := $(shell if [ -f `ocamlc -where`/dynlink.cmxa ]; then echo YES; else echo NO; fi)
