Add an ocamlbuild plugin package: js_of_ocaml.ocamlbuild

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,6 @@ benchmarks/results
 benchmarks/config
 lib/deriving_json/deriving_Json_lexer.ml
 Makefile.local
+
+# OCamlbuild dir
+ocamlbuild/_build/
