Fixed toplevel compilation

--- a/toplevel/Makefile
+++ b/toplevel/Makefile
@@ -15,8 +15,8 @@ endif
 
 COMP=../compiler/$(COMPILER)
 JSFILES=../runtime/runtime.js ../runtime/weak.js toplevel_runtime.js
-OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I +compiler-libs -I ../lib -I ../compiler/local
-STDLIB= ../lib/$(LIBNAME).cma ../compiler/local/compiler.cma $(OCAMLLIB)
+OCAMLC=ocamlfind ocamlc -package lwt,str -pp "camlp4o ../lib/syntax/pa_js.cmo" -I +compiler-libs -I ../lib -I ../compiler
+STDLIB= ../lib/$(LIBNAME).cma ../compiler/compiler.cma $(OCAMLLIB)
 EXPUNGE=$(shell ocamlc -where)/expunge
 # Removed gc and sys
 STDLIB_MODULES=\
@@ -71,17 +71,17 @@ $(NAME).js: $(NAME).byte $(COMP) $(JSFILES)
 	$(COMP) -I $(shell ocamlc -where)/compiler-libs -toplevel -noinline -noruntime $(JSFILES) $(NAME).byte $(OPTIONS)
 
 $(NAME).byte: $(OBJS) ../compiler/compiler.cma
-	$(OCAMLC) -linkall -package str -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
+	$(OCAMLC) -linkall -package str,ocamlgraph,findlib -linkpkg -o $@.tmp $(STDLIB) $(OBJS)
 	$(EXPUNGE) $@.tmp $@ $(PERVASIVES)
 	rm -f $@.tmp
 
 %.cmo: %.ml
 	$(OCAMLC) -c $<
 
-%.cmi: ../compiler/local/compiler.cma
+%.cmi: ../compiler/compiler.cma
 
-../compiler/local/compiler.cma:
-	$(MAKE) -C ../compiler local/compiler.cma
+../compiler/compiler.cma:
+	$(MAKE) -C ../compiler compiler.cma
 
 errors.cmi: errors.mli
 	$(OCAMLC) -c $<
@@ -90,6 +90,6 @@ clean::
 	rm -f *.cm[io] $(NAME).byte $(NAME).js
 
 depend:
-	ocamldep -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../compiler/local *.ml *.mli > .depend
+	ocamldep -pp "camlp4o ../lib/syntax/pa_js.cmo" -I ../compiler *.ml *.mli > .depend
 
 include .depend
