--- a/.gitignore
+++ b/.gitignore
@@ -17,30 +17,13 @@
 *~
 
 # Specific to Js_of_ocaml
-*.byte
-lib/stubs.c
-runtime/runtime.js
-toplevel/toplevel.js
-examples/wiki/wikicreole.ml
-examples/*/*.js
-compiler/js_of_ocaml
-compiler/joo_minify
-compiler/js_lexer.ml
-compiler/js_lexer.mli
-compiler/js_parser.ml
-compiler/js_parser.mli
-
-compiler/annot_lexer.ml
-compiler/annot_lexer.mli
-compiler/annot_parser.ml
-compiler/annot_parser.mli
-compiler/*.conflicts
 doc/api-html
 benchmarks/build
 benchmarks/results
 benchmarks/config
-lib/deriving_json/deriving_Json_lexer.ml
-Makefile.local
+
+*.native
+*.byte
 
 # OCamlbuild dir
-ocamlbuild/_build/
+_build
