--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,7 @@ LIBRARY  := js_of_ocaml
 LIBNAME  := js_of_ocaml$(LIBEXT)
 COMPILER := js_of_ocaml$(EXEEXT)
 COMPILER_LIBRARY := js_of_ocaml_compiler
-
+MINIFIER := joo_minify$(EXEEXT)
 # opt/byte
 BEST := opt
 
